fix: eliminate all 34 Eclipse warnings (0 errors, 0 warnings target)
Unused imports removed:
- com.ollanest.model.User from ChatService, CodeSandboxController,
  VoiceController, WorkspaceService (all use var/implicit types)
- java.io.File from PageController, WhisperServerManager, WorkspaceService
- java.util.Base64 from GmailConnector
- java.util.LinkedHashMap from ThreadController
- org.slf4j.Logger/LoggerFactory from ImageGenerationService, ProviderService
  (log fields removed)

Unused fields removed (dead DI injections):
- AuthController.databaseService — never called in any method
- AdminConnectorController.scheduler — documented as unused, now removed
- ChatService.databaseService — never called
- PageController.authService — uses BaseController.getUser() instead
- OllamaService.cryptoService — never called
- AuthService.mapper — never called
- DatabaseService.mapper — never called
- RagService.mapper — never called
- ImageGenerationService.log — no log.* calls in file
- ProviderService.log — no log.* calls in file
- SsoService.log — no log.* calls in file

Unused local variables removed:
- User admin = getUser(req) in AdminConnectorController.create()
- String rDesc = ... in GitHubConnector sync loop

Deprecated API fixes:
- new URL(String) → URI.create(...).toURL() in WhisperServerManager,
  UrlValidator (Java 20 deprecation)
- JsonNode.fields() → JsonNode.properties() in AirtableConnector,
  FunctionCallService (×2), OllamaService (Jackson 2.18 deprecation)

Type safety:
- LinearConnector: mapper.readValue(query, Map.class) →
  TypeReference<Map<String,Object>> (eliminates unchecked cast warning)

Serialization:
- ChatService inner ConcurrentHashMap: added serialVersionUID = 1L

Unnecessary @SuppressWarnings removed:
- ChatService.safeJsonList — TypeReference handles generics cleanly
- RouterService.safeJsonMap — TypeReference handles generics cleanly
- StateController.safeJson — no raw cast, suppression was incorrect

Test coverage:
- AuthControllerTest: